--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>CRUD VUE.JS</title>
+
 		<!-- Compiled and minified CSS -->
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+			crossorigin="anonymous"
 		/>
 	</head>
 	<body>
-		<div class="container" id="app">
-			<h1>Hello world!</h1>
+		<div class="container mt-5" id="app">
+			<h1>{{title}}</h1>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
+		<input
+			type="text"
+			class="form-control"
+			v-model="txtInput"
+			placeholder="type item"
+		/>
+		<button class="btn btn-success">Save</button>
+		<h4>{{txtInput}}</h4>
+		<div class="alert alert-primary" role="alert">
+			A simple primary alert—check it out!
+		</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src="./js/app.js"></script>
 	</body>
 </html>
