--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 			<h1>{{title}}</h1>
 		</div>
 
-		<input
-			type="text"
-			class="form-control"
-			v-model="txtInput"
-			placeholder="type item"
-		/>
+        <input type="text" class="form-control" v-model="txt" 
+        <h4>{{txt}}</h4>
+        />
+
+		<h4>{{txt}}</h4>
 		<button class="btn btn-success">Save</button>
-		<h4>{{txtInput}}</h4>
+
 		<div class="alert alert-primary" role="alert">
 			A simple primary alert—check it out!
 		</div>
