--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 			<h1>{{title}}</h1>
 		</div>
 
-        <input type="text" class="form-control" v-model="txt" 
-        <h4>{{txt}}</h4>
-        />
+		<input type="text" class="form-control" v-model="txt" />
 
 		<h4>{{txt}}</h4>
 		<button class="btn btn-success">Save</button>
